# VECMA-hackathon

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  easyvvuq_bout.py  example.py  example_blob2d.py  example_parallel.py  example_sample_location.py  example_sc_adaptive.py  requirements.txt  slurm_template.sh
boutvecma/: __init__.py  decoder.py  encoder.py  test_decoder.py  test_encoder.py
models/conduction/data/: BOUT.inp
workflows/blob2d_NON_FUNCTIONAL/: example_blob2d.py
workflows/conduction/: example.py
workflows/conduction_log_T/: example.py
workflows/first_example_NON_FUNCTIONAL/: example.py
workflows/numerical_parameters/1d_loglog/: example_numerical_parameters.py
workflows/numerical_parameters/1d_loglog_pce/: example_numerical_parameters.py
workflows/numerical_parameters/1d_loglog_sc/: example_numerical_parameters.py
workflows/numerical_parameters/2d_loglog_pce/: example_numerical_parameters.py
workflows/numerical_parameters/2d_loglog_sc/: example_numerical_parameters.py
workflows/parallel/: example_parallel.py
workflows/parallel_NON_FUNCTIONAL/: example_parallel.py
workflows/sample_location_NON_FUNCTIONAL/: example_sample_location.py
workflows/sc_adaptive/: example_sc_adaptive.py
workflows/sc_adaptive_over_time/: example_sca_over_time.py
workflows/sc_adaptive_restartable/: example_restartable_sc_adaptive.py
workflows/sd1d/case-01/: README.md  example.py  sc_adaptive.py
workflows/storm/pce/: example_pce.py
workflows/storm/pce_parallel/: example_blob2d_parallel.py  example_parallel.py  slurm_template.sh
(+4 files in other folders)
